fix injections